# java_test_mcp

./: LICENSE  README.md  pyproject.toml
java_test_mcp/: __init__.py  __main__.py  server.py
src/java_test_mcp/: download_jar.py  server.py  utils.py
tests/: test_tool.py
tests/main/test/com/examples/: HelloWorldTest.java
tests/src/com/examples/: HelloWorld.java
