[project]
name = "java_test_mcp"
version = "0.1.0"
description = "A simple Java test mcp server tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Toshihiko Aoki" }]
keywords = ["mcp", "llm", "automation", "java"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["anyio>=4.5", "pytest", "requests", "mcp"]

[project.scripts]
java_test_mcp= "java_test_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

exclude = [
    "tests/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/java_test_mcp"]

testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
